<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.BroncoRide.MainActivity$PlaceholderFragment" >

    <LinearLayout android:id="@+id/ll_email"
    	android:layout_width="match_parent" 
    	android:layout_height="wrap_content">
    	
	    <EditText android:id="@+id/signup_email"
	        android:layout_weight="0.7"
	        android:layout_width="0dp"
	        android:layout_height="wrap_content"
	        android:ems="10"
        	android:inputType="textEmailAddress" 
	        android:hint="@string/signup_email" />
	    
	    <Button
	        android:layout_weight="0.3"
	        android:layout_width="0dp"
	        android:layout_height="wrap_content"
	        android:text="@string/button_signup"
	        android:onClick="sendSignUp" />
    </LinearLayout>
    
    <LinearLayout android:id="@+id/ll_password"
    	android:layout_width="match_parent" 
    	android:layout_height="wrap_content"
    	android:layout_below="@id/ll_email">
    	
	    <EditText android:id="@+id/signin_password"
	        android:layout_weight="0.7"
	        android:layout_width="0dp"
	        android:layout_height="wrap_content"
	        android:ems="10"
        	android:inputType="textPassword" 
	        android:hint="@string/signin_password" />
	    
	    <Button
	        android:layout_weight="0.3"
	        android:layout_width="0dp"
	        android:layout_height="wrap_content"
	        android:text="@string/btn_signin"
	        android:onClick="sendSignIn" />
    </LinearLayout>


</RelativeLayout>
