<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.BroncoRide.DisplaySignUpProgress$PlaceholderFragment" >

    <TextView android:id="@+id/tv_welcome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tv_welcome" />

	<!--android:layout_below="@id/tv_welcome"-->
	
    <EditText android:id="@+id/et_signup_vcode"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:layout_below="@id/tv_welcome"
        android:layout_alignParentLeft="true"
        android:layout_toLeftOf="@+id/btn_vcode_submit"
        android:ems="10"
        android:hint="@string/et_signup_vcode" >

        <requestFocus />
    </EditText>
    
    <Button android:id="@+id/btn_vcode_submit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/tv_welcome"
        android:layout_alignParentRight="true"
        android:text="@string/btn_vcode_submit"
        android:onClick="sendVCode" />

</RelativeLayout>
